# KanbanTask

./: .env.example  .gitignore  APP_ANALYSIS.md  IMAGE_TRANSFER_GUIDE.md  README.md  UI_COMPONENT_SELECTION.md  create_test_data.py  docker-compose.yml  tsconfig.json  update_task_assignee.py  update_task_assignee_db.py  update_task_assignee_sql.sh
backend/: .dockerignore  Dockerfile  END_POINT.md  README_REFACTORING.md  STATUS_CODES.md  main.py  migrate_add_personal_task_support.py  migrate_add_project_fields.py  migrate_add_task_assignee.py  migrate_add_todo_dates.py  migrate_add_todos.py  migrate_update_statuses.py  models.py  project_schemas.py  pyproject.toml  requirements.txt  schemas.py  status_schemas.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  database_old.py  db_utils.py  exceptions.py  middleware.py  schemas.py  startup.py
backend/app/migrations/: migrate_add_order.py  migrate_add_personal_task_support.py  migrate_add_project.py  migrate_add_project_fields.py  migrate_add_status.py  migrate_add_status_id.py  migrate_add_task_assignee.py  migrate_add_todo_dates.py  migrate_add_todos.py  migrate_common_statuses.py  migrate_reset_projects.py  migrate_update_statuses.py
backend/app/models/: __init__.py  models.py
backend/app/projects/: __init__.py  router.py  schema.py  service.py
backend/app/schemas/: __init__.py  project.py  status.py  todo.py
backend/app/statuses/: __init__.py  router.py  schema.py  service.py
backend/app/tasks/: __init__.py  router.py  schema.py  service.py
(+48 files in other folders)
